--- a/SistemaInventario.AccesoDatos/SistemaInventario.AccesoDatos.csproj
+++ b/SistemaInventario.AccesoDatos/SistemaInventario.AccesoDatos.csproj
@@ -3,8 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Repositorio\Repositorio.cs~RFfe67fd.TMP" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.13" />
