--- a/SistemaInventarioV7/SistemaInventarioV7.csproj
+++ b/SistemaInventarioV7/SistemaInventarioV7.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.13" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
     <PackageReference Include="Rotativa.AspNetCore" Version="1.2.0" />
+    <PackageReference Include="Stripe.net" Version="43.2.0" />
   </ItemGroup>
 
   <ItemGroup>
